--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@
 
 .header .logo img {
   display: block;
-  width: 66%;
+
   height: 258px;
 }
 
@@ -153,6 +153,8 @@
   font-size: 14px;
   border-top: 3px solid black;
   background-color: #3a3a3a;
+  height: 150px;
+  line-height: 6px;
 }
 .footer h5{
   color: rgb(231 212 33);
@@ -181,9 +183,10 @@
 
 #menu-footer img{
   display: block;
-  width: 50%;
+
   margin-left: 15%;
   height: 258px;
+  margin-top: 0%;
 }
 
 #contacto p a{
@@ -222,17 +225,19 @@
 
 .skewed {
   position: absolute;
-  top: 161vh;
+  top: 137%;
   bottom: 0;
   right: 0;
   left: 0;
   width: 100%;
-  height: 82vh;
+  height: 26%;
   overflow: hidden;
   background: #f4f1ebdb;
   z-index: -1;
   transform: skewY(6deg);
   transform-origin: top right;
+  max-height: 40%;
+  line-height: 10%;
 }
 
 .boxTwo{
@@ -367,7 +372,7 @@
 .titulo-card{
   margin: 6% -25% 6% 15%;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 40px;
 
 }
 .direccion-card{
@@ -390,30 +395,29 @@ left: 50px;
 }
 
 /*Estilos cards eventos*/
-.card{
-  align-items: center;
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  flex-grow: 1;
-  
-}
+
 .card h2{
   font-size: 2rem;
-  font-weight: 500;
+  font-weight: bold;
   line-height: 1.2;
   margin-bottom: .5rem;
   margin-top: 0;
+}
+.bold-eventos-card{
+  font-weight: bold;
+  font-size: 20px;
 }
 .card{
   border-radius: 20px;
   box-shadow: 4px 4px 4px 3px #c9c2c2;
   display: flex;
+  align-items: center;
   overflow: hidden;
-  width: 800px;
-  height: 39vh;
-  margin: 5% 5% 5% 0%;
-  margin-left: 40vh;
+  max-width: 1000px;
+  height: 100%;
+  margin: 5% 16% 5% 16%;
+
+
 }
 .card .ladoIzq{
   color: white;
@@ -423,7 +427,7 @@ left: 50px;
 }
 
 .ladoIzq img{
-  height: 38vh;
+  max-height: 398px;
   border-radius: 5%;
   margin-left: 15%;
 }
@@ -486,7 +490,7 @@ left: 50px;
   margin: 3% 5% 5% 18%;
   height: 100%;
   padding: 15px;
-  gap: 5px;
+  gap: 10px;
 
 }
 
@@ -497,7 +501,7 @@ left: 50px;
 
 .flex-container > div{
   border-radius: 5px;
-  padding: 8px;
+  padding: 3px;
 }
 
 
@@ -506,6 +510,7 @@ left: 50px;
   order:0;
   flex-grow:1;
   align-self:auto;
+  flex-basis: 50%;
 }
     
 .item2 { 
@@ -517,15 +522,16 @@ left: 50px;
 .card-texto{
   border-radius: 20px;
   box-shadow: 4px 4px 4px 3px #c9c2c2;
-  background-color: #d6a93b17;
+  background-color: #eeede817;
   
-  width: 40vh;
-  height: 39vh;
+  width: 60vh;
+
   margin: -4% 5% 5% -17%;
 }
 
 .card-texto h2, p{
-  margin-left: 2%;
+  padding-left: 5px;
+  padding-top: 2%;
 }
 
 .imagen1 img{
@@ -539,6 +545,280 @@ left: 50px;
   width: 40%;
   margin: -69% 0% 10% 45%;
 }
-    
+
+.navmovil{
+  display:none;
+ 
+}
+
+.bold-eventos-card-2{
+  font-weight: bold;
+  font-size: 20px;
+  
+}
+
+
 /*Fin Estilos cards evento*/
 
+/*responsive*/
+@media (max-width: 2212px) {
+.card-texto{
+  width: 60vh;
+  max-height: 81%;
+}
+}
+@media (max-width: 1350px) {
+  .imgtextvox2{
+    display: none;
+  } 
+}
+ 
+@media (max-width: 1250px) {
+  .imgtextvox2{
+    display: none;
+  } 
+  
+}
+@media (max-width: 1074px) {
+  .card h2{
+    font-size: 1.7rem;
+  }
+  .card .ladoDer{
+    padding-right: 36px;
+  }
+  .imgtextvox2{
+    display: none;
+  } 
+  
+}
+@media (max-width: 1013px) {
+  .card-texto{
+    width: auto;
+    margin: 1% 0% 2% -1%;
+    max-width: 90%;
+    box-shadow: none;
+    
+  }
+  .imagen2 img{
+    margin-top: -68%;
+  }
+  .imagen1 img{
+    margin-top: -14%;
+  }
+  }
+@media (max-width: 972px) {
+  .ladoIzq img{
+    margin-left: 0px !important;
+  }
+  .card .ladoIzq{
+    padding: 1px;
+  }
+  
+  
+}
+@media (max-width: 833px) {
+  .card .ladoIzq::after{
+    background: none;
+    border-radius: 24px;
+    box-shadow: none ;
+    content: none;
+    transform: none;
+    transform-origin: none;   
+  }
+  .card h2{
+    font-size: 1.3rem;
+  }
+}
+@media (max-width: 772px) {
+  .card-texto{
+    width: auto;
+    margin: 1% 0% 2% -1%;
+    max-width: 90%;
+    box-shadow: none;
+    
+  }
+  .imagen2 img{
+    margin-top: -68%;
+  }
+  .imagen1 img{
+    margin-top: -14%;
+  }
+  }
+@media (max-width: 749px) {
+  .footer{
+    line-height: 27px;
+  }
+  .icons-redes a{
+font-size: 37px;
+
+  }
+  .icons-redes{
+    margin-top: 13px;
+  }
+  .footer #menu-footer{
+    margin-top: -8%;
+  }
+}
+@media (max-width: 666px) {
+ .card {
+  flex-direction: column;
+  max-height: 100%;
+ }
+ .card .ladoDer{
+  width: 100%;
+  margin: 1% 1% 10% 1%;
+ }
+ .ladoIzq img{
+  width: 100%;
+  max-height: none;
+  margin: 17% 1% 1% 1%;
+}
+.card .ladoIzq{
+  padding: 0px;
+  width: 263px;
+  
+}
+#menu-footer img{
+  height: 192px;
+}
+
+.header nav ul li a{
+  font-size: 11px !important;
+}
+
+.header .logo img{
+  width: 126px !important;
+}
+
+}
+
+@media(max-width: 488px){
+  .footer{
+    font-size: 14px;
+    
+  }
+  .footer #menu-footer{
+    width: 76px;
+  }
+}
+
+@media(max-width: 384px){
+  .card .ladoIzq{
+    width: 243px;
+  }
+  .btn{
+    margin-left: 8%;
+  }
+}
+
+@media (max-width: 750px) {
+  *{
+    margin: 0px;
+    padding: 0px;
+  }
+  .header nav ul li a{
+    font-size: 15px;
+  }
+  
+  .imgtextvox2{
+    display: none;
+  }
+
+  .header .logo{
+    margin: 3% 1% 1% 1%;
+  }
+  .header nav ul{
+    justify-content: flex-start;
+    margin: 2% 26% 2% -10% !important;
+  }
+  .navmovil li{
+    display: block;
+    margin: 5% 5% 5% 5%;
+  }
+  .header li ul {
+    display:none;
+    position:absolute;
+    min-width:140px;
+    left: 41%;
+
+  }
+  .header li:hover > ul {
+    display:block;
+  }
+
+  
+  
+  .header li ul li {
+    position:relative;
+  
+    
+  }
+  
+  .header li ul li ul {
+    right:-140px;
+    top:0px;
+  }
+
+  .fondo {
+    background-image: url("./images/fron2.jpg");
+    overflow: hidden;
+    background-position: 0px -130px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    max-height: 100vh;
+    min-height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+  }
+
+
+  .bold-eventos-card{
+    font-size: 15px;
+  }
+
+  #login input[type="submit"],
+  #login input[type="button"],
+  #login input[type="reset"] {
+    margin-top: 10px;
+    margin-right: -5%;
+    width: 40%;
+    margin-bottom: -10%;
+  }
+
+  #footer .wrap > div {
+    width: 24%;
+    margin-left: 5%;
+  }
+  #location iframe {
+    margin-left: -7%;
+  }
+  #footer h5 {
+    margin-left: -10%;
+  }
+  #browsers img {
+    width: 18% !important;
+  }
+  #footer h5 {
+    font-size: 35px;
+  }
+  #banner h1 {
+    font-size: 35px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 532px){
+  .inicio-barra{
+    display: none;
+  }
+  .header nav ul li a{
+    margin-right: -16px;
+  }
+}
+
+
+/*final*/
